--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "mc-command": "java -jar minecraft_server.1.12.jar nogui",
   "mc-directory": "mc",
   "auth-token": "token",
-  "channel": "177289345219297281"
+  "channel": "177289345219297281",
+  "prefixes": ["mc"]
 }
