--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "mc-command": "java -jar minecraft_server.1.12.jar nogui",
   "mc-directory": "mc",
   "mc-kill-timeout": 15,
+  "mc-autostart": true,
   "auth-token": "token",
   "channel": "177289345219297281",
   "prefixes": ["mc"],
